--- a/cnr_simple_touch_controller/cnr_simple_touch_controller/plugin.xml
+++ b/cnr_simple_touch_controller/cnr_simple_touch_controller/plugin.xml
@@ -1,5 +1,5 @@
 <library path="lib/libcnr_simple_touch_controller">
-  <class name="itia/control/SimpleTouchController" type="itia::control::SimpleTouchController" base_class_type="controller_interface::ControllerBase">
+  <class name="cnr/control/SimpleTouchController" type="cnr::control::SimpleTouchController" base_class_type="controller_interface::ControllerBase">
     <description>
       simple touch controller
     </description>
