--- a/cnr_cart_teleop_controller/package.xml
+++ b/cnr_cart_teleop_controller/package.xml
@@ -49,7 +49,7 @@
   <!-- Use doc_depend for packages you need only for building documentation: -->
   <!--   <doc_depend>doxygen</doc_depend> -->
   <buildtool_depend>catkin</buildtool_depend>
-  <build_depend>controller_interface</build_depend>
+  <build_depend>cnr_controller_interface</build_depend>
   <build_depend>controller_manager</build_depend>
   <build_depend>eigen_state_space_systems</build_depend>
   <build_depend>hardware_interface</build_depend>
@@ -61,8 +61,7 @@
   <build_depend>subscription_notifier</build_depend>
   <build_depend>urdf</build_depend>
   <build_depend>rosdyn_core</build_depend>
-  
-  <build_export_depend>controller_interface</build_export_depend>
+  <build_export_depend>cnr_controller_interface</build_export_depend>
   <build_export_depend>controller_manager</build_export_depend>
   <build_export_depend>eigen_state_space_systems</build_export_depend>
   <build_export_depend>hardware_interface</build_export_depend>
@@ -75,7 +74,7 @@
   <build_export_depend>urdf</build_export_depend>
   <build_export_depend>rosdyn_core</build_export_depend>
   
-  <exec_depend>controller_interface</exec_depend>
+  <exec_depend>cnr_controller_interface</exec_depend>
   <exec_depend>controller_manager</exec_depend>
   <exec_depend>eigen_state_space_systems</exec_depend>
   <exec_depend>hardware_interface</exec_depend>
@@ -89,7 +88,7 @@
   <exec_depend>rosdyn_core</exec_depend>
 
 
-  <!-- The export tag contains other, unspecified, tags -->
+  <depend>controller_interface</depend>
   <export>
     <controller_interface plugin="${prefix}/plugin.xml"/>
   </export>
