--- a/cnr_velocity_to_torque_controller/CMakeLists.txt
+++ b/cnr_velocity_to_torque_controller/CMakeLists.txt
@@ -4,9 +4,8 @@ add_compile_options(-std=c++11 -funroll-loops -Wall -Ofast)
 #set(CMAKE_BUILD_TYPE Release)
 set(CMAKE_BUILD_TYPE Debug)
 
-
-
 find_package(catkin REQUIRED COMPONENTS
+  cnr_controller_interface
   controller_interface
   controller_manager
   hardware_interface
@@ -23,7 +22,8 @@ find_package(catkin REQUIRED COMPONENTS
 catkin_package(
   INCLUDE_DIRS include
   LIBRARIES cnr_velocity_to_torque_controller
-  CATKIN_DEPENDS controller_interface controller_manager hardware_interface eigen_state_space_systems  subscription_notifier pluginlib roscpp sensor_msgs std_msgs
+  CATKIN_DEPENDS cnr_controller_interface controller_interface controller_manager hardware_interface
+  eigen_state_space_systems  subscription_notifier pluginlib roscpp sensor_msgs std_msgs
   DEPENDS 
 )
 
