--- a/cnr_velocity_to_torque_controller/package.xml
+++ b/cnr_velocity_to_torque_controller/package.xml
@@ -9,6 +9,7 @@
   <license>BSD</license>
 
   <buildtool_depend>catkin</buildtool_depend>
+  <build_depend>cnr_controller_interface</build_depend>
   <build_depend>controller_interface</build_depend>
   <build_depend>controller_manager</build_depend>
   <build_depend>hardware_interface</build_depend>
@@ -20,6 +21,7 @@
   <build_depend>std_msgs</build_depend>
   
   <run_depend>pluginlib</run_depend>
+  <run_depend>cnr_controller_interface</run_depend>
   <run_depend>controller_interface</run_depend>
   <run_depend>controller_manager</run_depend>
   <run_depend>hardware_interface</run_depend>
