--- a/cnr_joint_teleop_controller/package.xml
+++ b/cnr_joint_teleop_controller/package.xml
@@ -9,6 +9,7 @@
 
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>urdf</build_depend>
+  <build_depend>controller_interface</build_depend>
   <build_depend>cnr_controller_interface</build_depend>
   <build_depend>eigen_state_space_systems</build_depend>
   <build_depend>cnr_hardware_interface</build_depend>
@@ -20,6 +21,7 @@
   <build_depend>cnr_hardware_interface</build_depend>
 
   <build_export_depend>urdf</build_export_depend>
+  <build_export_depend>controller_interface</build_export_depend>
   <build_export_depend>cnr_controller_interface</build_export_depend>
   <build_export_depend>eigen_state_space_systems</build_export_depend>
   <build_export_depend>cnr_hardware_interface</build_export_depend>
@@ -31,6 +33,7 @@
   <build_export_depend>subscription_notifier</build_export_depend>
   
   <exec_depend>urdf</exec_depend>
+  <exec_depend>controller_interface</exec_depend>
   <exec_depend>cnr_controller_interface</exec_depend>
   <exec_depend>eigen_state_space_systems</exec_depend>
   <exec_depend>cnr_hardware_interface</exec_depend>
