--- a/cnr_position_to_velocity_controller/package.xml
+++ b/cnr_position_to_velocity_controller/package.xml
@@ -40,6 +40,7 @@
   <!-- Use test_depend for packages you need only for testing: -->
   <!--   <test_depend>gtest</test_depend> -->
   <buildtool_depend>catkin</buildtool_depend>
+  <build_depend>controller_interface</build_depend>
   <build_depend>cnr_controller_interface</build_depend>
   <build_depend>cnr_hardware_interface</build_depend>
   <build_depend>eigen_state_space_systems</build_depend>
@@ -51,6 +52,7 @@
   <build_depend>urdf</build_depend>
 
   <run_depend>pluginlib</run_depend>
+  <run_depend>controller_interface</run_depend>
   <run_depend>cnr_controller_interface</run_depend>
   <run_depend>controller_manager</run_depend>
   <run_depend>cnr_hardware_interface</run_depend>
@@ -60,7 +62,6 @@
   <run_depend>sensor_msgs</run_depend>
   <run_depend>std_msgs</run_depend>
   <run_depend>urdf</run_depend>
-
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
