throttle && removed useless memory creation

--- a/cnr_velocity_to_torque_controller/CMakeLists.txt
+++ b/cnr_velocity_to_torque_controller/CMakeLists.txt
@@ -1,15 +1,13 @@
 cmake_minimum_required(VERSION 2.8.3)
 project(cnr_velocity_to_torque_controller)
 
-set(CMAKE_BUILD_TYPE Debug)
+if(NOT CMAKE_BUILD_TYPE)
+  set(CMAKE_BUILD_TYPE Release)
+endif()
 set(CMAKE_CXX_STANDARD 14)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 
-add_compile_options(-funroll-loops -Wall -Ofast)
-
-#set(CMAKE_BUILD_TYPE Release)
-set(CMAKE_BUILD_TYPE Debug)
 
 find_package(catkin REQUIRED COMPONENTS
   cnr_controller_interface
@@ -34,18 +32,12 @@ catkin_package(
   DEPENDS 
 )
 
-include_directories(
-	include
-  ${catkin_INCLUDE_DIRS}
-)
+include_directories(include ${catkin_INCLUDE_DIRS})
 
-add_library(${PROJECT_NAME}
-  src/${PROJECT_NAME}/cnr_velocity_to_torque_controller.cpp
-)
+add_library(${PROJECT_NAME} src/${PROJECT_NAME}/cnr_velocity_to_torque_controller.cpp )
 add_dependencies(${PROJECT_NAME} ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
-target_link_libraries(${PROJECT_NAME}
-  ${catkin_LIBRARIES}
-)
+target_link_libraries(${PROJECT_NAME} ${catkin_LIBRARIES} )
+target_compile_options(${PROJECT_NAME} PUBLIC -Wall $<$<CONFIG:RELEASE>:-Ofast>)
 
 install(DIRECTORY include/${PROJECT_NAME}/
    DESTINATION ${CATKIN_PACKAGE_INCLUDE_DESTINATION}
