--- a/cnr_open_loop_position_controller/CMakeLists.txt
+++ b/cnr_open_loop_position_controller/CMakeLists.txt
@@ -5,7 +5,7 @@ project(cnr_open_loop_position_controller)
 if(NOT CMAKE_BUILD_TYPE)
   set(CMAKE_BUILD_TYPE Release)
 endif()
-set(CMAKE_CXX_STANDARD 14)
+set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 
@@ -18,7 +18,9 @@ find_package(catkin REQUIRED COMPONENTS
   roscpp
   sensor_msgs
   subscription_notifier
-  )
+)
+
+find_package(Eigen3 3.3 REQUIRED NO_MODULE)
 
 catkin_package(
   INCLUDE_DIRS include
@@ -27,19 +29,13 @@ catkin_package(
   sensor_msgs subscription_notifier
   DEPENDS
   )
-include_directories(
-  include
-  ${catkin_INCLUDE_DIRS}
-  )
+include_directories( include ${catkin_INCLUDE_DIRS})
 
-add_library(${PROJECT_NAME}
-  src/${PROJECT_NAME}/cnr_open_loop_position_controller.cpp
-  )
-
+add_library(${PROJECT_NAME} src/${PROJECT_NAME}/cnr_open_loop_position_controller.cpp)
 add_dependencies(${PROJECT_NAME} ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
-target_link_libraries(${PROJECT_NAME}
-  ${catkin_LIBRARIES}
-  )
+target_link_libraries(${PROJECT_NAME} ${catkin_LIBRARIES} Eigen3::Eigen)
+target_compile_options(${PROJECT_NAME} PUBLIC -Wall $<$<CONFIG:RELEASE>:-Ofast>)
+#target_compile_definitions(${PROJECT_NAME} PUBLIC -DEIGEN_DONT_VECTORIZE=1)
 
 install(TARGETS ${PROJECT_NAME}
   ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
