--- a/cnr_position_to_velocity_controller/CMakeLists.txt
+++ b/cnr_position_to_velocity_controller/CMakeLists.txt
@@ -2,11 +2,12 @@ cmake_minimum_required(VERSION 3.1)
 
 project(cnr_position_to_velocity_controller)
 
-set(CMAKE_BUILD_TYPE Debug)
-set(CMAKE_CXX_STANDARD 14)
+if(NOT CMAKE_BUILD_TYPE)
+  set(CMAKE_BUILD_TYPE Release)
+endif()
+set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
-
 
 find_package(catkin REQUIRED COMPONENTS
   controller_interface
@@ -21,27 +22,23 @@ find_package(catkin REQUIRED COMPONENTS
   urdf
 )
 
+find_package(Eigen3 3.3 REQUIRED NO_MODULE)
+
 catkin_package(
   INCLUDE_DIRS include
   LIBRARIES cnr_position_to_velocity_controller
   CATKIN_DEPENDS cnr_controller_interface controller_manager cnr_hardware_interface eigen_state_space_systems 
                  subscription_notifier pluginlib roscpp sensor_msgs std_msgs  urdf
-  DEPENDS
+  DEPENDS Eigen3
 )
 
-include_directories(
-	include
-  ${catkin_INCLUDE_DIRS}
-)
+include_directories(include ${catkin_INCLUDE_DIRS})
 
-add_library(${PROJECT_NAME}
-  src/${PROJECT_NAME}/cnr_position_to_velocity_math.cpp
-  src/${PROJECT_NAME}/cnr_position_to_velocity_controller.cpp
-)
+add_library(${PROJECT_NAME} src/${PROJECT_NAME}/cnr_position_to_velocity_math.cpp src/${PROJECT_NAME}/cnr_position_to_velocity_controller.cpp)
 add_dependencies(${PROJECT_NAME} ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
-target_link_libraries(${PROJECT_NAME}
-  ${catkin_LIBRARIES}
-)
+target_link_libraries(${PROJECT_NAME} ${catkin_LIBRARIES} Eigen3::Eigen)
+target_compile_options(${PROJECT_NAME} PUBLIC -Wall $<$<CONFIG:RELEASE>:-Ofast>)
+#target_compile_definitions(${PROJECT_NAME} PUBLIC -DEIGEN_DONT_VECTORIZE=1)
 
 install(DIRECTORY include/${PROJECT_NAME}/
    DESTINATION ${CATKIN_PACKAGE_INCLUDE_DESTINATION}
