--- a/cnr_velocity_to_torque_controller/CMakeLists.txt
+++ b/cnr_velocity_to_torque_controller/CMakeLists.txt
@@ -4,7 +4,7 @@ project(cnr_velocity_to_torque_controller)
 if(NOT CMAKE_BUILD_TYPE)
   set(CMAKE_BUILD_TYPE Release)
 endif()
-set(CMAKE_CXX_STANDARD 14)
+set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 
@@ -24,20 +24,23 @@ find_package(catkin REQUIRED COMPONENTS
   
 )
 
+find_package(Eigen3 3.3 REQUIRED NO_MODULE)
+
 catkin_package(
   INCLUDE_DIRS include
   LIBRARIES cnr_velocity_to_torque_controller
   CATKIN_DEPENDS cnr_controller_interface controller_interface controller_manager hardware_interface
   eigen_state_space_systems  subscription_notifier pluginlib roscpp sensor_msgs std_msgs
-  DEPENDS 
+  DEPENDS Eigen3
 )
 
 include_directories(include ${catkin_INCLUDE_DIRS})
 
 add_library(${PROJECT_NAME} src/${PROJECT_NAME}/cnr_velocity_to_torque_controller.cpp )
 add_dependencies(${PROJECT_NAME} ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
-target_link_libraries(${PROJECT_NAME} ${catkin_LIBRARIES} )
+target_link_libraries(${PROJECT_NAME} ${catkin_LIBRARIES} Eigen3::Eigen)
 target_compile_options(${PROJECT_NAME} PUBLIC -Wall $<$<CONFIG:RELEASE>:-Ofast>)
+#target_compile_definitions(${PROJECT_NAME} PUBLIC -DEIGEN_DONT_VECTORIZE=1)
 
 install(DIRECTORY include/${PROJECT_NAME}/
    DESTINATION ${CATKIN_PACKAGE_INCLUDE_DESTINATION}
