--- a/cnr_open_loop_effort_controller/CMakeLists.txt
+++ b/cnr_open_loop_effort_controller/CMakeLists.txt
@@ -4,7 +4,7 @@ project(cnr_open_loop_effort_controller)
 if(NOT CMAKE_BUILD_TYPE)
   set(CMAKE_BUILD_TYPE Release)
 endif()
-set(CMAKE_CXX_STANDARD 14)
+set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 
@@ -18,20 +18,22 @@ find_package(catkin REQUIRED COMPONENTS
   roscpp
   std_msgs
   sensor_msgs
-  eigen_state_space_systems
 )
+
+find_package(Eigen3 3.3 REQUIRED NO_MODULE)
 
 catkin_package(
   INCLUDE_DIRS include
   LIBRARIES ${PROJECT_NAME}
-  CATKIN_DEPENDS cnr_controller_interface controller_interface controller_manager hardware_interface eigen_state_space_systems  subscription_notifier pluginlib roscpp sensor_msgs std_msgs
+  CATKIN_DEPENDS cnr_controller_interface controller_interface controller_manager hardware_interface subscription_notifier pluginlib roscpp sensor_msgs std_msgs
   DEPENDS
 )
 
-include_directories( include ${catkin_INCLUDE_DIRS} )
+include_directories(include ${catkin_INCLUDE_DIRS})
 
 add_library(${PROJECT_NAME} src/${PROJECT_NAME}/cnr_open_loop_effort_controller.cpp)
 add_dependencies(${PROJECT_NAME} ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
-target_link_libraries(${PROJECT_NAME} ${catkin_LIBRARIES} )
+target_link_libraries(${PROJECT_NAME} ${catkin_LIBRARIES} Eigen3::Eigen)
 target_compile_options(${PROJECT_NAME} PUBLIC -Wall $<$<CONFIG:RELEASE>:-Ofast>)
+#target_compile_definitions(${PROJECT_NAME} PUBLIC -DEIGEN_DONT_VECTORIZE=1)
 
