--- a/cnr_velocity_to_torque_controller/CMakeLists.txt
+++ b/cnr_velocity_to_torque_controller/CMakeLists.txt
@@ -18,10 +18,8 @@ find_package(catkin REQUIRED COMPONENTS
   pluginlib
   roscpp
   std_msgs
-  
   sensor_msgs
   eigen_state_space_systems
-  
 )
 
 find_package(Eigen3 3.3 REQUIRED NO_MODULE)
@@ -41,6 +39,30 @@ add_dependencies(${PROJECT_NAME} ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EX
 target_link_libraries(${PROJECT_NAME} ${catkin_LIBRARIES} Eigen3::Eigen)
 target_compile_options(${PROJECT_NAME} PUBLIC -Wall $<$<CONFIG:RELEASE>:-Ofast>)
 #target_compile_definitions(${PROJECT_NAME} PUBLIC -DEIGEN_DONT_VECTORIZE=1)
+
+if(${CMAKE_VERSION} VERSION_GREATER  "3.16.0") 
+  target_precompile_headers(${PROJECT_NAME} PUBLIC #include <thread>
+    <mutex>
+    <vector>
+    <string>
+    <ros/time.h>
+    <ros/duration.h>
+    <sensor_msgs/JointState.h>
+
+    <subscription_notifier/subscription_notifier.h>
+    <eigen_state_space_systems/eigen_state_space_systems.h>
+    <eigen_state_space_systems/eigen_controllers.h>
+    <hardware_interface/joint_command_interface.h>
+    <cnr_controller_interface/cnr_joint_command_controller_interface.h>>)
+endif()
+
+# include <cnr_controller_interface/cnr_joint_command_controller_interface.h>
+# include <hardware_interface/joint_command_interface.h>
+
+# include <subscription_notifier/subscription_notifier.h>
+# include <eigen_state_space_systems/eigen_state_space_systems.h>
+# include <eigen_state_space_systems/eigen_controllers.h>
+# include <ros/callback_queue.h>
 
 install(DIRECTORY include/${PROJECT_NAME}/
    DESTINATION ${CATKIN_PACKAGE_INCLUDE_DESTINATION}
