--- a/cnr_homing_controller/package.xml
+++ b/cnr_homing_controller/package.xml
@@ -55,6 +55,7 @@
   <build_depend>hardware_interface</build_depend>
   <build_depend>pluginlib</build_depend>
   <build_depend>roscpp</build_depend>
+  <build_depend>cnr_fake_hardware_interface</build_depend>
   
   <build_export_depend>cnr_controller_interface</build_export_depend>
   <build_export_depend>controller_interface</build_export_depend>
@@ -62,14 +63,15 @@
   <build_export_depend>hardware_interface</build_export_depend>
   <build_export_depend>pluginlib</build_export_depend>
   <build_export_depend>roscpp</build_export_depend>
-  
+  <build_export_depend>cnr_fake_hardware_interface</build_export_depend>
+
   <exec_depend>cnr_controller_interface</exec_depend>
   <exec_depend>controller_interface</exec_depend>
   <exec_depend>controller_manager</exec_depend>
   <exec_depend>hardware_interface</exec_depend>
   <exec_depend>pluginlib</exec_depend>
   <exec_depend>roscpp</exec_depend>
-  
+  <exec_depend>cnr_fake_hardware_interface</exec_depend>
   <export>
     <controller_interface plugin="${prefix}/plugin.xml"/>
   </export>
