--- a/cnr_joint_state_publisher/CMakeLists.txt
+++ b/cnr_joint_state_publisher/CMakeLists.txt
@@ -21,10 +21,18 @@ find_package(catkin REQUIRED COMPONENTS
   subscription_notifier
 )
 
+if(CATKIN_ENABLE_TESTING AND ENABLE_COVERAGE_TESTING)
+  find_package(code_coverage REQUIRED)
+  # Add compiler flags for coverage instrumentation before defining any targets
+  APPEND_COVERAGE_COMPILER_FLAGS()
+endif()
+
 catkin_package(
   INCLUDE_DIRS include
   LIBRARIES cnr_joint_state_publisher
-  CATKIN_DEPENDS cnr_controller_interface controller_interface controller_manager  eigen_state_space_systems hardware_interface pluginlib roscpp sensor_msgs std_msgs subscription_notifier
+  CATKIN_DEPENDS cnr_controller_interface controller_interface controller_manager
+                  eigen_state_space_systems hardware_interface pluginlib roscpp sensor_msgs
+                    std_msgs subscription_notifier
   DEPENDS 
 )
 
@@ -55,4 +63,35 @@ install(DIRECTORY include/${PROJECT_NAME}/
 
 install(FILES plugin.xml
   DESTINATION share/${PROJECT_NAME})
+  
+  
+
+#############
+## Testing ##
+#############
+
+
+## Add gtest based cpp test target and link libraries
+if(CATKIN_ENABLE_TESTING)
+  find_package(roscpp REQUIRED)
+  find_package(rostest REQUIRED)
+  find_package(cnr_fake_hardware_interface REQUIRED)
+  add_rostest_gtest(${PROJECT_NAME}_test test/test.launch test/test.cpp)
+  target_include_directories(${PROJECT_NAME}_test PUBLIC
+    include 
+    ${catkin_INCLUDE_DIRS}
+    ${Boost_INCLUDE_DIRS}
+    ${EIGEN3_INCLUDE_DIRS}
+    ${cnr_fake_hardware_interface_INCLUDE_DIRS})
+  target_link_libraries(${PROJECT_NAME}_test ${PROJECT_NAME} ${catkin_LIBRARIES} ${roscpp_LIBRARIES} ${cnr_fake_hardware_interface_LIBRARIES})
+
+  if(ENABLE_COVERAGE_TESTING)
+    set(COVERAGE_EXCLUDES "*/${PROJECT_NAME}/test*")
+    add_code_coverage(
+      NAME ${PROJECT_NAME}_coverage_report
+      DEPENDENCIES ${PROJECT_NAME}_test
+    )
+  endif()
+endif()
+
 
