--- a/cnr_velocity_to_torque_controller/package.xml
+++ b/cnr_velocity_to_torque_controller/package.xml
@@ -13,7 +13,8 @@
   <build_depend>controller_interface</build_depend>
   <build_depend>controller_manager</build_depend>
   <build_depend>hardware_interface</build_depend>
-  <build_depend>eigen_state_space_systems</build_depend>
+  <build_depend>state_space_controllers</build_depend>
+  <build_depend>state_space_ros</build_depend>
   <build_depend>subscription_notifier</build_depend>
   <build_depend>pluginlib</build_depend>
   <build_depend>roscpp</build_depend>
@@ -25,7 +26,8 @@
   <run_depend>controller_interface</run_depend>
   <run_depend>controller_manager</run_depend>
   <run_depend>hardware_interface</run_depend>
-  <run_depend>eigen_state_space_systems</run_depend>
+  <run_depend>state_space_controllers</run_depend>
+  <run_depend>state_space_ros</run_depend>
   <run_depend>subscription_notifier</run_depend>
   <run_depend>roscpp</run_depend>
   <run_depend>sensor_msgs</run_depend>
