--- a/cnr_joint_teleop_controller/package.xml
+++ b/cnr_joint_teleop_controller/package.xml
@@ -11,7 +11,7 @@
   <build_depend>urdf</build_depend>
   <build_depend>controller_interface</build_depend>
   <build_depend>cnr_controller_interface</build_depend>
-  <build_depend>eigen_state_space_systems</build_depend>
+  <build_depend>state_space_controllers</build_depend>
   <build_depend>cnr_hardware_interface</build_depend>
   <build_depend>pluginlib</build_depend>
   <build_depend>roscpp</build_depend>
@@ -23,7 +23,7 @@
   <build_export_depend>urdf</build_export_depend>
   <build_export_depend>controller_interface</build_export_depend>
   <build_export_depend>cnr_controller_interface</build_export_depend>
-  <build_export_depend>eigen_state_space_systems</build_export_depend>
+  <build_export_depend>state_space_controllers</build_export_depend>
   <build_export_depend>cnr_hardware_interface</build_export_depend>
 
   <build_export_depend>pluginlib</build_export_depend>
@@ -35,7 +35,7 @@
   <exec_depend>urdf</exec_depend>
   <exec_depend>controller_interface</exec_depend>
   <exec_depend>cnr_controller_interface</exec_depend>
-  <exec_depend>eigen_state_space_systems</exec_depend>
+  <exec_depend>state_space_controllers</exec_depend>
   <exec_depend>cnr_hardware_interface</exec_depend>
   <exec_depend>pluginlib</exec_depend>
   <exec_depend>roscpp</exec_depend>
