--- a/cnr_position_to_velocity_controller/package.xml
+++ b/cnr_position_to_velocity_controller/package.xml
@@ -19,7 +19,8 @@
   <build_depend>controller_interface</build_depend>
   <build_depend>cnr_controller_interface</build_depend>
   <build_depend>cnr_hardware_interface</build_depend>
-  <build_depend>eigen_state_space_systems</build_depend>
+  <build_depend>state_space_controllers</build_depend>
+  <build_depend>state_space_ros</build_depend>
   <build_depend>subscription_notifier</build_depend>
   <build_depend>pluginlib</build_depend>
   <build_depend>roscpp</build_depend>
@@ -32,7 +33,8 @@
   <run_depend>cnr_controller_interface</run_depend>
   <run_depend>controller_manager</run_depend>
   <run_depend>cnr_hardware_interface</run_depend>
-  <run_depend>eigen_state_space_systems</run_depend>
+  <run_depend>state_space_controllers</run_depend>
+  <run_depend>state_space_ros</run_depend>
   <run_depend>subscription_notifier</run_depend>
   <run_depend>roscpp</run_depend>
   <run_depend>sensor_msgs</run_depend>
