--- a/robot_state_controller/CMakeLists.txt
+++ b/robot_state_controller/CMakeLists.txt
@@ -27,11 +27,8 @@ include_directories(
   ${catkin_INCLUDE_DIRS}
   )
 
-add_library(${PROJECT_NAME}
-  src/${PROJECT_NAME}/robot_state_controller.cpp
-  )
-
+add_library(${PROJECT_NAME} src/${PROJECT_NAME}/robot_state_controller.cpp)
 add_dependencies(${PROJECT_NAME} ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
-target_link_libraries(${PROJECT_NAME}
-  ${catkin_LIBRARIES}
-  )
+target_link_libraries(${PROJECT_NAME}  ${catkin_LIBRARIES})
+target_compile_options(${PROJECT_NAME} PUBLIC -Wall -faligned-new
+        $<$<CONFIG:Release>:-Ofast -funroll-loops -ffast-math -march=native -mavx -mfma>)
