--- a/cnr_position_to_velocity_controller/CMakeLists.txt
+++ b/cnr_position_to_velocity_controller/CMakeLists.txt
@@ -34,7 +34,7 @@ catkin_package(
 
 include_directories(include ${catkin_INCLUDE_DIRS})
 
-add_library(${PROJECT_NAME} src/${PROJECT_NAME}/cnr_position_to_velocity_controller.cpp)
+add_library(${PROJECT_NAME} src/${PROJECT_NAME}/cnr_position_to_velocity_controller.cpp src/${PROJECT_NAME}/cnr_position_to_velocity_math.cpp )
 add_dependencies(${PROJECT_NAME} ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 target_link_libraries(${PROJECT_NAME} ${catkin_LIBRARIES} Eigen3::Eigen)
 target_compile_options(${PROJECT_NAME} PUBLIC -Wall -faligned-new
