--- a/force_torque_publisher/plugin.xml
+++ b/force_torque_publisher/plugin.xml
@@ -1,5 +1,5 @@
 <library path="lib/libforce_torque_publisher">
-  <class name="ros/control/JointStatePublisher" type="ros::control::JointStatePublisher" base_class_type="controller_interface::ControllerBase">
+  <class name="cnr/control/ForceTorquePublisher" type="ros::control::ForceTorquePublisher" base_class_type="controller_interface::ControllerBase">
     <description>
     </description>
   </class>
