--- a/cnr_cartesian_velocity_controller/plugin.xml
+++ b/cnr_cartesian_velocity_controller/plugin.xml
@@ -1,5 +1,26 @@
 <library path="lib/libcnr_cartesian_velocity_controller">
+  <class name="cnr/control/CartesianTeleopController"
+         type="cnr::control::CartesianVelocityController"
+         base_class_type="controller_interface::ControllerBase">
+    <description>
+      The Joint Teleop controller
+    </description>
+  </class>
   <class name="cnr/control/CartesianVelocityController"
+         type="cnr::control::CartesianVelocityController"
+         base_class_type="controller_interface::ControllerBase">
+    <description>
+      The Joint Teleop controller
+    </description>
+  </class>
+  <class name="cnr/control/CartTeleopController"
+         type="cnr::control::CartesianVelocityController"
+         base_class_type="controller_interface::ControllerBase">
+    <description>
+      The Joint Teleop controller
+    </description>
+  </class>
+  <class name="cnr/control/CartVelocityController"
          type="cnr::control::CartesianVelocityController"
          base_class_type="controller_interface::ControllerBase">
     <description>
