nicola: removed inline from cpp files!

--- a/cnr_joint_velocity_controller/package.xml
+++ b/cnr_joint_velocity_controller/package.xml
@@ -46,6 +46,8 @@
   <depend>name_sorting</depend>
   <depend>joint_limits_interface</depend>
 
+  <test_depend>cnr_fake_hardware_interface</test_depend>
+
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
