--- a/cnr_joint_state_publisher/package.xml
+++ b/cnr_joint_state_publisher/package.xml
@@ -45,6 +45,7 @@
   <exec_depend>std_msgs</exec_depend>
   <exec_depend>subscription_notifier</exec_depend>
 
+  <test_depend>cnr_fake_hardware_interface</test_depend>
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
