nicola: colcon compatibility

--- a/analog_state_publisher/CMakeLists.txt
+++ b/analog_state_publisher/CMakeLists.txt
@@ -46,3 +46,6 @@ install(DIRECTORY include/${PROJECT_NAME}/
   PATTERN ".svn" EXCLUDE
 )
 
+install(FILES plugin.xml
+  DESTINATION share/${PROJECT_NAME})
+
