--- a/cnr_cartesian_velocity_controller/CMakeLists.txt
+++ b/cnr_cartesian_velocity_controller/CMakeLists.txt
@@ -85,3 +85,21 @@ if(CATKIN_ENABLE_TESTING)
     )
   endif()
 endif()
+
+install(TARGETS ${PROJECT_NAME}
+  ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
+  LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
+  RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
+)
+
+# Mark cpp header files for installation
+install(DIRECTORY include/${PROJECT_NAME}/
+  DESTINATION ${CATKIN_PACKAGE_INCLUDE_DESTINATION}
+  FILES_MATCHING PATTERN "*.h"
+  PATTERN ".svn" EXCLUDE
+)
+
+install(FILES plugin.xml
+  DESTINATION share/${PROJECT_NAME})
+
+
