--- a/cnr_joint_velocity_controller/CMakeLists.txt
+++ b/cnr_joint_velocity_controller/CMakeLists.txt
@@ -55,6 +55,22 @@ if(${CMAKE_VERSION} VERSION_GREATER  "3.16.0")
   )
 endif()
 
+## Mark cpp header files for installation
+install(DIRECTORY include/${PROJECT_NAME}/
+DESTINATION ${CATKIN_PACKAGE_INCLUDE_DESTINATION}
+FILES_MATCHING PATTERN "*.h"
+PATTERN ".git" EXCLUDE
+)
+
+install(TARGETS ${PROJECT_NAME}
+ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
+LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
+RUNTIME DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
+)
+
+install(FILES plugin.xml
+  DESTINATION share/${PROJECT_NAME})
+
 
 
 #############
