--- a/robot_state_controller/CMakeLists.txt
+++ b/robot_state_controller/CMakeLists.txt
@@ -60,3 +60,7 @@ LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
 RUNTIME DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
 )
 
+install(FILES plugin.xml
+  DESTINATION share/${PROJECT_NAME})
+
+
