--- a/force_torque_publisher/CMakeLists.txt
+++ b/force_torque_publisher/CMakeLists.txt
@@ -55,3 +55,7 @@ install(DIRECTORY include/${PROJECT_NAME}/
   PATTERN ".svn" EXCLUDE
 )
 
+install(FILES plugin.xml
+  DESTINATION share/${PROJECT_NAME})
+
+
